force-app/main/default/objects/Candidate__c/fields/Profile_score__c.field-meta.xml
<CustomField>
    <fullName>Profile_score__c</fullName>
    <label>Profile score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>