force-app/main/default/objects/Candidate__c/fields/Test_Score__c.field-meta.xml
<CustomField>
    <fullName>Test_Score__c</fullName>
    <label>Test Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>