force-app/main/default/objects/Candidate__c/validationRules/Score_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Score_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Test_Score__c &lt; 0,Test_Score__c &gt; 10, Profile_score__c &lt; 0, Profile_score__c &gt; 10)</errorConditionFormula>
    <errorMessage>Score should be between 0 to 10</errorMessage>
</ValidationRule>